--- a/style.css
+++ b/style.css
@@ -1,6 +1,4 @@
-.section2 .content{
-   
-}
+
 .section1{
     background-color: #5cc7cb;
 }
@@ -17,6 +15,9 @@ nav{
 .white-space::after{
     content: "";
     display: block;
+    position: absolute;
+    left: 600px;
+    top: 360px;
     height: 5px;
     width: 10%;
     background-color: white;
@@ -47,4 +48,19 @@ nav{
 
 .color{
     background-color: #5cc7cb; 
+}
+
+.section5{
+    background-color:#3a546d ;
+    color: white;
+}
+
+.color-b{
+    color: #5cc7cb ;
+}
+
+.section6{
+    background-color: #2c3e50;
+    color: white;
+    height: 140px;
 }
