--- a/style.css
+++ b/style.css
@@ -12,18 +12,40 @@ nav{
    
 }
 
-.white-space::after{
-    content: "";
-    display: block;
-    position: absolute;
-    left: 600px;
-    top: 360px;
-    height: 5px;
-    width: 10%;
+.icona-stella::before{
+    content: "" ;
+    height: 5px ;
+    flex-grow: 1;
     background-color: white;
     border: solid 0 white;
     border-radius: 20px;
-    margin: auto;
+}
+
+.icona-stella::after{
+    content: "";
+    height: 5px;
+    flex-grow: 1;
+    background-color: white;
+    border: solid 0 white;
+    border-radius: 20px;
+}
+
+.icona-stella-black::before{
+    content: "" ;
+    height: 5px ;
+    flex-grow: 1;
+    background-color: black;
+    border: solid 0 black;
+    border-radius: 20px;
+}
+
+.icona-stella-black::after{
+    content: "";
+    height: 5px;
+    flex-grow: 1;
+    background-color: black;
+    border: solid 0 black;
+    border-radius: 20px;
 }
 
 .black-space::after{
