edit hover with before and after img section 2

--- a/style.css
+++ b/style.css
@@ -84,3 +84,31 @@ nav{
 }
 
 
+.section2 .content{
+    position: relative;
+}
+
+.section2 .content:hover{
+    position: relative;
+    cursor: pointer;
+}
+
+.section2 .content:hover::before{
+    content: "";
+    display: block;
+    position: absolute;
+    inset: 0;
+    background-color: green;
+    opacity: 0.5;
+}
+
+.section2 .content:hover::after{
+    content: "";
+    display: block;
+    position: absolute;
+    inset: 0;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='white' class='bi bi-plus' viewBox='0 0 16 16'%3E%3Cpath d='M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z'/%3E%3C/svg%3E");
+   background-position: center;
+   background-repeat: no-repeat;
+   background-size: 50%;
+}
